Fix overlapping card stacks

--- a/frontend/assets/app.scss
+++ b/frontend/assets/app.scss
@@ -1,5 +1,5 @@
 .playingcard {
-  @apply m-2 inline-block;
+  @apply p-2 inline-block;
 }
 
 .playingcard--sm {
